--- a/package.json
+++ b/package.json
@@ -1,18 +1,23 @@
 {
-  "name": "graphql-hello-world-server",
+  "name": "server",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
+  "type": "module",
+  "license": "MIT",
   "scripts": {
-    "start": "node server.js"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node src/index.js"
   },
-  "author": "me",
-  "license": "ISC",
   "dependencies": {
-    "apollo-server": "^2.14.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "ethers": "^5.7.2",
     "express": "^4.18.2",
-    "graphql": "^14.6.0",
-    "graphql-request": "^5.2.0"
+    "fs-extra": "^10.1.0",
+    "helmet": "^6.0.0",
+    "lodash": "^4.17.21",
+    "mongodb-memory-server": "^8.10.0",
+    "mongoose": "^6.7.2",
+    "mongoose-long": "^0.6.0"
   }
 }
